crates/ars-collections/tests/ui/tab_key_wrong_uuid_literal.rs
use ars_collections::TabKey;

#[derive(TabKey)]
enum BadTab {
    #[tab_key(uuid = 1)]
    Profile,
}

fn main() {}
